--- a/style.css
+++ b/style.css
@@ -64,7 +64,14 @@ body {
   height: 100%;
 }
 
+.logo{
+    height: 100px;
+}
 
+.mainHeader{
+  
+    margin-top: 500px ;
+}
 
 .vertical-center {
   min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
